taiga-async-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\Users\i340544\Downloads\kompose-windows-amd64.exe -f .\docker-compose.yml
      -f .\docker-compose-inits.yml convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: taiga-async
  name: taiga-async
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: taiga-async
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: C:\Users\i340544\Downloads\kompose-windows-amd64.exe -f .\docker-compose.yml
          -f .\docker-compose-inits.yml convert
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.network/taiga: "true"
        io.kompose.service: taiga-async
    spec:
      containers:
      - command:
        - /taiga-back/docker/async_entrypoint.sh
        image: taigaio/taiga-back:latest
        imagePullPolicy: ""
        name: taiga-async
        resources: {}
        volumeMounts:
        - mountPath: /taiga-back/static
          name: taiga-static-data
        - mountPath: /taiga-back/media
          name: taiga-media-data
      restartPolicy: Always
      serviceAccountName: ""
      volumes:
      - name: taiga-static-data
        persistentVolumeClaim:
          claimName: taiga-static-data
      - name: taiga-media-data
        persistentVolumeClaim:
          claimName: taiga-media-data
status: {}
