taiga-async-rabbitmq-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\Users\i340544\Downloads\kompose-windows-amd64.exe -f .\docker-compose.yml
      -f .\docker-compose-inits.yml convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: taiga-async-rabbitmq
  name: taiga-async-rabbitmq
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: taiga-async-rabbitmq
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: C:\Users\i340544\Downloads\kompose-windows-amd64.exe -f .\docker-compose.yml
          -f .\docker-compose-inits.yml convert
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.network/taiga: "true"
        io.kompose.service: taiga-async-rabbitmq
    spec:
      containers:
      - env:
        - name: RABBITMQ_DEFAULT_PASS
          value: taiga
        - name: RABBITMQ_DEFAULT_USER
          value: taiga
        - name: RABBITMQ_DEFAULT_VHOST
          value: taiga
        - name: RABBITMQ_ERLANG_COOKIE
          value: secret-erlang-cookie
        image: rabbitmq:3-management-alpine
        imagePullPolicy: ""
        name: taiga-async-rabbitmq
        resources: {}
        volumeMounts:
        - mountPath: /var/lib/rabbitmq
          name: taiga-async-rabbitmq-data
      restartPolicy: Always
      serviceAccountName: ""
      volumes:
      - name: taiga-async-rabbitmq-data
        persistentVolumeClaim:
          claimName: taiga-async-rabbitmq-data
status: {}
