taiga-db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\Users\i340544\Downloads\kompose-windows-amd64.exe -f .\docker-compose.yml
      -f .\docker-compose-inits.yml convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: taiga-db
  name: taiga-db
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: taiga-db
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: C:\Users\i340544\Downloads\kompose-windows-amd64.exe -f .\docker-compose.yml
          -f .\docker-compose-inits.yml convert
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.network/taiga: "true"
        io.kompose.service: taiga-db
    spec:
      containers:
      - env:
        - name: POSTGRES_DB
          value: taiga
        - name: POSTGRES_PASSWORD
          value: taiga
        - name: POSTGRES_USER
          value: taiga
        image: postgres:12.3
        imagePullPolicy: ""
        name: taiga-db
        resources: {}
        volumeMounts:
        - mountPath: /var/lib/postgresql/data
          name: taiga-db-data
          subPath: data
      restartPolicy: Always
      serviceAccountName: ""
      volumes:
      - name: taiga-db-data
        persistentVolumeClaim:
          claimName: taiga-db-data
status: {}
