taiga-front-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\Users\i340544\Downloads\kompose-windows-amd64.exe -f .\docker-compose.yml
      -f .\docker-compose-inits.yml convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: taiga-front
  name: taiga-front
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: taiga-front
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: C:\Users\i340544\Downloads\kompose-windows-amd64.exe -f .\docker-compose.yml
          -f .\docker-compose-inits.yml convert
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.network/taiga: "true"
        io.kompose.service: taiga-front
    spec:
      containers:
      - env:
        - name: TAIGA_URL
          value: http://localhost:9000
        - name: TAIGA_WEBSOCKETS_URL
          value: ws://localhost:9000
        image: taigaio/taiga-front:latest
        imagePullPolicy: ""
        name: taiga-front
        resources: {}
      restartPolicy: Always
      serviceAccountName: ""
      volumes: null
status: {}
