taiga-protected-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\Users\i340544\Downloads\kompose-windows-amd64.exe -f .\docker-compose.yml
      -f .\docker-compose-inits.yml convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: taiga-protected
  name: taiga-protected
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: taiga-protected
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: C:\Users\i340544\Downloads\kompose-windows-amd64.exe -f .\docker-compose.yml
          -f .\docker-compose-inits.yml convert
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.network/taiga: "true"
        io.kompose.service: taiga-protected
    spec:
      containers:
      - env:
        - name: MAX_AGE
          value: "360"
        - name: SECRET_KEY
          value: taiga-back-secret-key
        image: taigaio/taiga-protected:latest
        imagePullPolicy: ""
        name: taiga-protected
        resources: {}
      restartPolicy: Always
      serviceAccountName: ""
      volumes: null
status: {}
