taiga-events-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: ..\kompose-windows-amd64.exe convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: taiga-events
  name: taiga-events
spec:
  ports:
  - name: "3032"
    port: 3032
    targetPort: 3032
  selector:
    io.kompose.service: taiga-events
status:
  loadBalancer: {}
