taiga-gateway-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: C:\Users\i340544\Downloads\kompose-windows-amd64.exe -f .\docker-compose.yml
      -f .\docker-compose-inits.yml convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: taiga-gateway
  name: taiga-gateway
spec:
  ports:
  - name: "9000"
    port: 9000
    targetPort: 80
  selector:
    io.kompose.service: taiga-gateway
status:
  loadBalancer: {}
