taiga-protected-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: ..\kompose-windows-amd64.exe convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: taiga-protected
  name: taiga-protected
spec:
  ports:
  - name: "8003"
    port: 8003
    targetPort: 8003
  selector:
    io.kompose.service: taiga-protected
status:
  loadBalancer: {}
